# grokking_vs_learning

./: .gitignore  InformationGeometricAnalysis.py  LICENSE  README.md  pyproject.toml
ising/: dynamic_plot.py  environment.yml  run_ising.py
ising/configs/: ising_config.yaml  ising_config_grok.yaml  ising_config_nogrok.yaml
ising/datasets/: ising_dataset.py  mod_add_dataset.py
ising/helper_functions/: data_tools.py  train_tools.py
ising/models/: architechtures.py  bases.py  constructor.py
ising/plotting/: plot_pruning.py  plot_pruning_per_layer.py  simple_plot.py
ising/tools/: config_method_parser.py  train_args.py
mnist/: cluster2.py  cluster_run_average.py  config_average.txt  data_objects.py  dynamic_plot.py  grokfast.py  grokfast_copy.py  grokking-feature-timescales-anon-final.ipynb  mnist_2.py  mnist_config.yaml  run_script_config_seedavg.sh  submit_locally.sh  teg_copy.py
mod_add/: examine_runs.py  run_mod_add.py
mod_add/configs/: mod_config_grok.yaml  mod_config_nogrok.yaml
mod_add/datasets/: fisher.py  mod_add_dataset.py
mod_add/helper_functions/: data_tools.py  train_tools.py
mod_add/models/: architechtures.py  bases.py  constructor.py
mod_add/models/activations/: activations.py
mod_add/plotting/: plot.py  plot_pruning.py  plot_pruning_per_layer.py  simple_plot.py
mod_add/tests/: test2.py
mod_add/tools/: config_method_parser.py  data_objects.py  train_args.py  wrappers.py
